--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@
 *.exe
 *.out
 *.app
+.vs/ProjectWallet/FileContentIndex/b8495f6e-0597-4308-bf30-93ea7da64a0e.vsidx
+.vs/ProjectWallet/FileContentIndex/becc6ee8-214c-4947-b7f9-e7f7fc70055f.vsidx
+.vs/ProjectWallet/v17/Browse.VC.db
+.vs/ProjectWallet/v17/Browse.VC.db-wal
+.vs/ProjectWallet/v17/Browse.VC.opendb
+.vs/ProjectWallet/v17/ipch/AutoPCH/e182742e8f586fea/MAIN.ipch
