add files systems

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 .vs/ProjectWallet/v17/Browse.VC.db-wal
 .vs/ProjectWallet/v17/Browse.VC.opendb
 .vs/ProjectWallet/v17/ipch/AutoPCH/e182742e8f586fea/MAIN.ipch
+.vs/ProjectWallet/FileContentIndex/4398847d-35a6-4bc8-aea2-4ecd5b490ef2.vsidx
+.vs/ProjectWallet/FileContentIndex/7a0f5f3d-e027-41fe-9e63-e8afa6f81f73.vsidx
+.vs/ProjectWallet/v17/ipch/AutoPCH/692583b9af70c214/COLOR.ipch
+.vs/ProjectWallet/v17/ipch/AutoPCH/f8bcadf4496ec92/KEYBOARD.ipch
