create signin and signup

--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="accountModel.cpp" />
     <ClCompile Include="basePage.cpp" />
     <ClCompile Include="color.cpp" />
     <ClCompile Include="configApp.cpp" />
@@ -134,20 +135,24 @@
     <ClCompile Include="inputField.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="manageAccount.cpp" />
     <ClCompile Include="pageManageAccount.cpp" />
     <ClCompile Include="pageAdmin.cpp" />
     <ClCompile Include="pageCustomer.cpp" />
     <ClCompile Include="pageSignIn.cpp" />
+    <ClCompile Include="pageSignUp.cpp" />
     <ClCompile Include="pagingData.cpp" />
     <ClCompile Include="singleton.cpp" />
     <ClCompile Include="text.cpp" />
     <ClCompile Include="windows.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AccountModel.h" />
     <ClInclude Include="BasePage.h" />
     <ClInclude Include="ConfigApp.h" />
     <ClInclude Include="InputField.h" />
     <ClInclude Include="json.hpp" />
+    <ClInclude Include="ManageAccount.h" />
     <ClInclude Include="mycolor.h" />
     <ClInclude Include="mydraw.h" />
     <ClInclude Include="mykeyboard.h" />
@@ -156,6 +161,7 @@
     <ClInclude Include="PageAdmin.h" />
     <ClInclude Include="PageCustomer.h" />
     <ClInclude Include="PageSignIn.h" />
+    <ClInclude Include="PageSignUp.h" />
     <ClInclude Include="PagingData.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Text.h" />
