--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="accountModel.cpp" />
     <ClCompile Include="basePage.cpp" />
+    <ClCompile Include="manageTransaction.cpp" />
     <ClCompile Include="pageChangePassword.cpp" />
     <ClCompile Include="color.cpp" />
     <ClCompile Include="configApp.cpp" />
@@ -148,11 +149,13 @@
     <ClCompile Include="sha256.cpp" />
     <ClCompile Include="singleton.cpp" />
     <ClCompile Include="text.cpp" />
+    <ClCompile Include="transactionModel.cpp" />
     <ClCompile Include="windows.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccountModel.h" />
     <ClInclude Include="BasePage.h" />
+    <ClInclude Include="manageTransaction.h" />
     <ClInclude Include="PageChangePassword.h" />
     <ClInclude Include="ConfigApp.h" />
     <ClInclude Include="InputField.h" />
@@ -173,6 +176,7 @@
     <ClInclude Include="sha256.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Text.h" />
+    <ClInclude Include="transactionModel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
