--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manageAccount.cpp" />
     <ClCompile Include="pageForgotPassword.cpp" />
+    <ClCompile Include="pageHistoryTransaction.cpp" />
     <ClCompile Include="pageManageAccount.cpp" />
     <ClCompile Include="pageAdmin.cpp" />
     <ClCompile Include="pageCustomer.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="mykeyboard.h" />
     <ClInclude Include="mywindows.h" />
     <ClInclude Include="PageForgotPassword.h" />
+    <ClInclude Include="PageHistoryTransaction.h" />
     <ClInclude Include="PageManageAccount.h" />
     <ClInclude Include="PageAdmin.h" />
     <ClInclude Include="PageCustomer.h" />
