create UI profile and add function BE profile

--- a/ProjectWallet/ProjectWallet.vcxproj.filters
+++ b/ProjectWallet/ProjectWallet.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="pageHistoryTransaction.cpp">
       <Filter>Source Files\FE</Filter>
     </ClCompile>
+    <ClCompile Include="pageProfile.cpp">
+      <Filter>Source Files\FE\PageOfCustomer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputField.h">
@@ -208,6 +211,9 @@
     </ClInclude>
     <ClInclude Include="PageHistoryTransaction.h">
       <Filter>Header Files\FE</Filter>
+    </ClInclude>
+    <ClInclude Include="PageProfile.h">
+      <Filter>Header Files\FE\PageOfCustomer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
