--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="pageCustomer.cpp" />
     <ClCompile Include="pageManageWallet.cpp" />
     <ClCompile Include="pagePointTransaction.cpp" />
+    <ClCompile Include="pageProfile.cpp" />
     <ClCompile Include="pageSignIn.cpp" />
     <ClCompile Include="pageSignUp.cpp" />
     <ClCompile Include="pagingData.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="PageCustomer.h" />
     <ClInclude Include="PageManageWallet.h" />
     <ClInclude Include="PagePointTransaction.h" />
+    <ClInclude Include="PageProfile.h" />
     <ClInclude Include="PageSignIn.h" />
     <ClInclude Include="PageSignUp.h" />
     <ClInclude Include="PagingData.h" />
