create UI popup otp

--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="pageSignUp.cpp" />
     <ClCompile Include="pageUserTransaction.cpp" />
     <ClCompile Include="pagingData.cpp" />
+    <ClCompile Include="popupOTP.cpp" />
     <ClCompile Include="sha256.cpp" />
     <ClCompile Include="singleton.cpp" />
     <ClCompile Include="text.cpp" />
@@ -181,6 +182,7 @@
     <ClInclude Include="PageSignUp.h" />
     <ClInclude Include="PageUserTransaction.h" />
     <ClInclude Include="PagingData.h" />
+    <ClInclude Include="PopupOTP.h" />
     <ClInclude Include="sha256.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Text.h" />
