--- a/ProjectWallet/ProjectWallet.vcxproj.filters
+++ b/ProjectWallet/ProjectWallet.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="backup.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="otpService.cpp">
+      <Filter>Source Files\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputField.h">
@@ -231,6 +234,9 @@
       <Filter>Header Files\FE</Filter>
     </ClInclude>
     <ClInclude Include="backup.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="otpService.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
   </ItemGroup>
