--- a/ProjectWallet/ProjectWallet.vcxproj
+++ b/ProjectWallet/ProjectWallet.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="pageManageWallet.cpp" />
     <ClCompile Include="pagePointTransaction.cpp" />
     <ClCompile Include="pageProfile.cpp" />
+    <ClCompile Include="pageSetupOtp.cpp" />
     <ClCompile Include="pageSignIn.cpp" />
     <ClCompile Include="pageSignUp.cpp" />
     <ClCompile Include="pageUserTransaction.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="PageManageWallet.h" />
     <ClInclude Include="PagePointTransaction.h" />
     <ClInclude Include="PageProfile.h" />
+    <ClInclude Include="PageSetupOtp.h" />
     <ClInclude Include="PageSignIn.h" />
     <ClInclude Include="PageSignUp.h" />
     <ClInclude Include="PageUserTransaction.h" />
