--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@
 .vs/ProjectWallet/v17/ipch/AutoPCH/692583b9af70c214/COLOR.ipch
 .vs/ProjectWallet/v17/ipch/AutoPCH/f8bcadf4496ec92/KEYBOARD.ipch
 .vs/
+
+# lib
+vcpkg/
+vcpkg.rar
